ola-parser/src/testdata/syntaxTests/parsing/constant_is_keyword.sol
contract Foo {
	u256 constant = 4;
}
// ----
// ParserError 2314: (30-31): Expected identifier but got '='
